@@ -7,7 +7,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import pro.taskana.common.api.WorkingTimeCalculator;
@@ -91,7 +90,7 @@ public class WorkingDaysToDaysReportConverter {
         cacheDaysToWorkingDays.entrySet().stream()
             .filter(entry -> entry.getValue() == amountOfWorkdays)
             .map(Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
     if (listOfAllMatchingDays.isEmpty()) {
       return Collections.singletonList(amountOfWorkdays);
     }
